# BirdsEye

./: .dockerignore  .gitignore  CONFIGS.md  Dockerfile  IEEE_ROSE.ipynb  Makefile  README.md  demo.ipynb  extractmp4subtitles.sh  geolocate.ini  geolocate.py  geolocate.yml  light_mcts.py  lightweight.py  lightweight_config.ini  lightweight_mcts_config.ini  lightweight_repp_config.ini  lightweight_results.ipynb  lightweight_separable.py  lightweight_separable_config.ini  lightweight_simple_config.ini  lightweight_simple_separable_config.ini  multi_target_results.ipynb  post_process.ipynb  pyproject.toml  radiation_pattern_monopole.csv  radiation_pattern_yagi_5.csv  requirements.txt  results.ipynb  results_guide.ipynb  rl.ipynb  rl_test.ipynb  run_birdseye.py  sigscan.py  sigscan_config.ini  test_run.py
.github/workflows/: docker-test.yml  docker.yml  tests-codecheck.yml  tests-unit.yml
birdseye/: __init__.py  actions.py  baseline.py  definitions.py  dqn.py  env.py  mcts.py  mcts_utils.py  method_utils.py  mqtt.py  mqtt_fake.py  observations.py  planner.py  results.py  sensor.py  state.py  utils.py
birdseye/notebooks/: demo.ipynb  rl.ipynb  rl_test.ipynb
birdseye/pfrnn/: model.py  pfrnn.py  pfrnn_utils.py
birdseye/planners/: lavapilot.py  light_mcts.py  repp.py
birdseye/rl_common/: logger.py  models.py  replay_buffer.py  util.py
configs/: dqn.yaml  dqn_multi.yaml  dqneval.yaml  mcts.yaml  mcts_multi.yaml  random_multi.yaml  static_multi.yaml
data/: test1.csv  test2.csv  test3.csv
data/gnu-radio/: birds-eye-file-threshold.grc  birds-eye-squelch-2.grc  birds-eye-squelch-bladerf.grc  birds-eye-squelch-usrp-dji.grc  birds_eye_file_threshold.py  birds_eye_squelch_2.py  birds_eye_squelch_bladerf.py  birds_eye_squelch_usrp.py
deePOE-mod/: Omni_Receiver_4_Directions_2D_CNN_Multiangle_Projection_Outdoor.py  README.md
docs/: CONFIGS.md
gamutrf_fieldtest/: aligned_1653589177_1653589237.json  aligned_1653590947_1653591007.json  aligned_1653599174_1653599808.json
src/: __init__.py  demo.ipynb  mcts.py  mcts_utils.py  observations.py
static/styles/: birdseye.css
telemetry-data/: README.md
telemetry-data/mavlink_udp/: Makefile  README.md  mavlink_serial.c  (+2 more)
templates/: birdseye_live.html  gui_from_buffer.html  gui_from_file.html  loading.html
test/: test_integration.py
tests/: requirements.txt  test_dqn.py  test_geolocate.ini  test_geolocate.py  test_integration.py  test_mcts.py  test_mcts_multi.yaml  test_mqtt.py  test_mqtt_fake.py  test_planner.py  test_results.py  test_run_birdseye.py  test_sigscan.py  test_sigscan_config.ini  test_sigscan_config2.ini  test_sigscan_config3.ini  test_sigscan_config4.ini  test_utils.py
(+19 files in other folders)
