[tool.poetry]
name = "birdseye"
version = "0.2.2-dev"
description = "The BirdsEye project demonstrates the simulated tracking of radio frequency (RF) signals via reinforcement learning (RL) techniques implemented on low-fidelity sensors."
authors = ["Your Name <you@example.com>"]
license = "Apache-2"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
flask = "3.0.2"
imageio = "2.34.0"
ipython = "8.18.1"
matplotlib = "3.8.3"
numpy = "1.26.4"
paho-mqtt = "1.6.1"
pandas = "2.2.0"
pfilter = "0.2.5"
requests = "2.31.0"
scipy = "1.12.0"
tqdm = "4.66.2"
seaborn = "^0.13.0"
pynput = "^1.7.6"


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.0"
pytype = "^2024.0.0"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
torch = ">=2.0.0, !=2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
