[tool.poetry]
name = "birdseye"
version = "0.2.2-dev"
description = "The BirdsEye project demonstrates the simulated tracking of radio frequency (RF) signals via reinforcement learning (RL) techniques implemented on low-fidelity sensors."
authors = ["Your Name <you@example.com>"]
license = "Apache-2"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
flask = "3.1.0"
imageio = "2.36.0"
ipython = "8.35.0"
matplotlib = "3.9.2"
numpy = "2.0.1"
paho-mqtt = "2.1.0"
pandas = "2.2.3"
pfilter = "0.2.5"
requests = "2.32.3"
scipy = "1.13.1"
tqdm = "4.67.0"
seaborn = "^0.13.0"
pynput = "^1.7.6"


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.0"
pytype = "^2024.0.0"
pytest = "^8.0.0"
pytest-cov = "^6.0.0"
torch = ">=2.0.0, !=2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
